# CommonDataLayer

./: .gitignore  CHANGELOG.md  Cargo.ci.toml  Cargo.toml  Dockerfile  Dockerfile.e2e  README.md  build.sh  requirements.txt
.cargo/: config.toml
.cdl/development/: api.toml  command-service.toml  data-router.toml  default.toml  object-builder.toml  partial-update-engine.toml  schema-registry.toml
.cdl/development-grpc/: README.md  command-service.toml  default.toml  edge-registry.toml  materializer-general.toml  object-builder.toml  schema-registry.toml
.cdl/development-rabbitmq/: README.md  api.toml  data-router.toml  default.toml  query-service-ts.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-mdbook.yml  deploy-mdbook.yml  mdbook-publish.yml  pr-title-check.yaml  publish-nightly.yml  publish.yml  release-nightly.yml  release.yml  rust-audit-check.yml  rust-audit-periodic.yaml  senko.yml  test-component.yml  test-deployment.yml  test-unit.yml  testing-helm.yml  testing.yml
CDL.Tests/: .gitignore  CDL.Tests.csproj  DependencyClass.cs  DependencyClassJ.cs  Dockerfile  IDependency.cs  IDependencyJ.cs  README.md  Startup.cs  UnitTest1.cs  build.sh  env.sh
CDL.Tests/Configuration/: ConfigurationOptions.cs
CDL.Tests/Proto/: materializer_ondemand.proto  object_builder.proto  schema_registry.proto
CDL.Tests/Services/: EdgeRegistryService.cs  QueryRouterService.cs  SchemaRegistryService.cs
CDL.Tests/ServicesTests/: EdgeRegistryServiceTests.cs  MaterializationTests.cs  QueryServiceTests.cs  (+1 more)
benchmarking/: Cargo.toml
cdl-site/: README.md  package-lock.json  package.json  size-plugin.json
command-service/: Cargo.toml
crates/partial-update-engine/: Cargo.toml
crates/partial-update-engine/src/: main.rs
crates/utils/crates/communication/: Cargo.toml
crates/utils/crates/communication/src/: consumer.rs  kafka_ack_queue.rs  lib.rs  metadata_fetcher.rs  parallel_consumer.rs  publisher.rs
docs/: Architecture.md  CDL-Cli.md  Getting-Started.md  SUMMARY.md  architecture.md  branching_strategy.md  data_router.md  getting_started.md  k8s_local_deployment.md  schema_registry.md
e2e/: Cargo.toml  pod.yml  test.sh
e2e/src/: api.rs  (+5 more)
leader-elector/: Cargo.toml
query-router/: Cargo.toml  README.md  api.yml
query-service/: Cargo.toml
query-service-ts/: Cargo.toml
rpc/: Cargo.toml
tests/: README.md  docker-compose.yml  run-tests.sh
utils/: Cargo.toml
web-admin/: .gitignore  codegen.yml  package-lock.json  package.json  rollup.config.js
xtask/: Cargo.toml
(+423 files in other folders)
