cargo-features = ["named-profiles"]

[workspace]
members = [
  "benchmarking",
  "xtask",
  "crates/*",
  "crates/utils/crates/*"
]

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.release]
lto = true
codegen-units = 1

# [patch."https://github.com/frondeus/snapshot-runner.git"]
# snapshot-runner = { path = "../Personal/snapshot-runner" } # todo: remove me before merge
