[package]
name = "xtask"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
pico-args = "0.3.4"
glob = "0.3.0"
xshell = "0.1.8"
crossterm = "0.18.2"

tonic-build = { version = "0.4", default-features = false, features = ["prost", "transport"] }
itertools = "0.10.0"
