[package]
name = "partial-update-engine"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "partial-update-engine"
path = "src/main.rs"

[dependencies]
# Workspace
utils       = { path = "../utils" }


# Crates.io
anyhow      = "1.0"
async-trait = "0.1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
structopt   = "0.3"
tokio       = { version = "0.2", features = ["macros"] }
tracing     = "0.1"
uuid        = { version = "0.8", features = ["v1", "serde"] }
